--- a/player.html
+++ b/player.html
@@ -74,5 +74,8 @@
       location.href = '/';
     }
   </script>
+  <div style="text-align:center; padding:20px; color:#aaa; font-size:12px; background:#000;">
+  本网站仅供学习交流，版权归原作者所有。API 来自 GD Studio，感谢支持！
+</div>
 </body>
 </html>
